--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "mailtrap/mailtrap-php": "^3.2"
+        "phpmailer/phpmailer": "^6.9"
     }
 }
