--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "require": {
         "vlucas/phpdotenv": "^5.6",
         "phpmailer/phpmailer": "^6.9",
-        "mpdf/mpdf": "^6.1"
+        "mpdf/mpdf": "8.1"
     }
 }
